--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,7 +61,10 @@ hr {
     display: block !important;
   }
     
+    
 } 
+
+ 
 
 /*VLASTNÍ KÓD*/
 
@@ -127,6 +130,7 @@ hr {
     width: 100%;
     color: white;
     font-size: 2.5rem;
+    user-select: none;    
 }
 
 
@@ -142,11 +146,21 @@ hr {
         width: 100%;
         max-width: 100%;
     }
+    #arrows a{
+    padding:2%;    
+    }
     #leftarrow {
     left:0%;
     }
     #rightarrow {
     right: 0%;
+    }
+    #slajddescription {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;  
+    }
+    #slajdcircles {
+    font-size: 1.5rem;
     }
     #logo {
     max-width: 14rem;
