--- a/stylesheet.css
+++ b/stylesheet.css
@@ -158,8 +158,15 @@ hr {
 }
 
 #modalarrows a:hover {
-    background-color: black;
-    transition: background-color 0.5s ease;
+    background-color: #57575757;
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+#modalarrows a:active {
+    background-color: #57575700;
+    transition: background-color 0.2s ease;
     cursor: pointer;
     text-decoration: none;
 }
