--- a/stylesheet.css
+++ b/stylesheet.css
@@ -541,3 +541,11 @@ filter:brightness(0.75);
     max-width: 100%;
     }
 }
+
+.justlink {
+    all: unset;
+}
+
+.justlink:hover {
+    text-decoration: none;
+}
