--- a/stylesheet.css
+++ b/stylesheet.css
@@ -493,14 +493,14 @@ float:left;
 }
 
 #appimg {
-max-width: 80%;
-max-height: 60%;
-display: block;
-margin-left: auto;
-margin-right: auto;   
-margin-bottom: 0.5rem;
-transition: 0.5s;
-filter:brightness(0.75);    
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0.5rem;
+	transition: 0.5s;
+	filter: brightness(0.75);
+	height: 20rem;
+	max-width: 100%;
 }
 
 
