--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,34 @@
+:root {
+    --font-color: #ffffff;
+    --font-decoration-color: #73a2ad;
+    --bg-color: #303030;
+    --box-color: #1a1a22;
+    --box-hover-color: #202044;
+}
+
+[data-theme="light"] {
+    --font-color: #000000;
+    --font-decoration-color: #666666;
+    --bg-color: #cbcbcb;
+    --box-color: #9d9d9d;
+    --box-hover-color: #758296;
+}
+
+[data-theme="dark"] {
+    --font-color: #ffffff;
+    --font-decoration-color: #73a2ad;
+    --bg-color: #303030;
+    --box-color: #1a1a22;
+    --box-hover-color: #202044;    
+}
+
+
 
 body {
-    background-color: #cbcbcb;
+    transition: 0.5s;
+    background-color: var(--bg-color);
     font-family: helvetica, arial, sans-serif;
+    color: var(--font-color);
 }
 
 #logo {
@@ -25,7 +52,7 @@ navbar {
 }
 
 a {
-  color: black;
+  color: var(--font-color);
   text-decoration: none;
 }
 
@@ -38,6 +65,11 @@ hr {
     border: 0.1px solid #959595;
 }
 
+#darkmodeSwitch {
+    border: 1px solid;
+    border-radius: 0.25rem;
+    width: 7rem;
+}
 /* NAVBAR ČORKNUTÝ KÓD*/
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -68,6 +100,18 @@ hr {
  
 
 /*VLASTNÍ KÓD*/
+
+button {
+    border: 1px solid;
+    border-radius: 0.25rem;
+    background-color: var(--bg-color);
+    color: var(--font-color);
+    padding: 0.5rem;
+}
+
+button:hover {
+    cursor: pointer;
+}
 
 #intro {
     text-align: center;
@@ -264,7 +308,7 @@ hr {
 }
 
 .quote {
-    color: #545454;
+    color: var(--font-decoration-color);
 }
 
 #mephoto {
@@ -469,7 +513,7 @@ float:left;
     width: 100%;
     font-weight: bold;
     font-size: 2rem;
-    background-color: #e7e7e7;
+    background-color: var(--box-color);
     padding-bottom:0;
     padding-top:0;
     transition: padding-bottom 0.75s ease, padding-top 0.75s ease;
@@ -485,33 +529,35 @@ float:left;
 /*APLIKACE*/
 
 #appsection {
-    margin-top: 2rem;
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+	margin-top: 2rem;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	align-items: flex-start;
 }
 
 #appimg {
-max-width: 80%;
-max-height: 60%;
-display: block;
-margin-left: auto;
-margin-right: auto;   
-margin-bottom: 0.5rem;
-transition: 0.5s;
-filter:brightness(0.75);    
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0.5rem;
+	transition: 0.5s;
+	filter: brightness(0.75);
+	height: 20rem;
+	max-width: 100%;
 }
 
 
 #appbox {
-  border: 1px solid black;
-  border-radius: 20px;
-  width: 33rem;
-  padding: 1rem;
-  text-align: center;
-  transition: 0.5s;
-  margin-bottom: 1rem;
-  position: relative;
+	/* border: 1px solid black; */
+	border-radius: 20px;
+	width: 33rem;
+	padding: 1rem;
+	text-align: center;
+	transition: 0.5s;
+	margin-bottom: 1rem;
+	position: relative;
+	background-color: var(--box-color);
 }
 
 .techlogo { 
@@ -524,7 +570,7 @@ filter:brightness(0.75);
 }
 
 #appbox:hover {
-  background-color: #758296;
+  background-color: var(--box-hover-color);
   cursor: pointer;
 }
 
@@ -538,7 +584,7 @@ filter:brightness(0.75);
 
 @media screen and (max-width: 800px) {
     #appbox {
-    max-width: 100%;
+    width: 85% !important;
     }
 }
 
